--- a/e2e/package.json
+++ b/e2e/package.json
@@ -7,7 +7,7 @@
     "build-example:android": "detox build --configuration example.android.emu-28.release",
     "test-example:android-28": "detox test --configuration example.android.emu-28.release --loglevel verbose --take-screenshots failing --record-videos failing --retries 2",
     "test-example:android-31": "detox test --configuration example.android.emu-31.release --loglevel verbose --take-screenshots failing --record-videos failing --retries 2",
-    "build-example:ios": "detox build --configuration example.ios.sim.release",
+    "build-example:ios": "detox build --configuration example.ios.sim-17.release",
     "test-example:ios-17": "detox test --configuration example.ios.sim-17.release --loglevel verbose --take-screenshots failing --record-videos failing --retries 2",
     "test-example:ios-18": "detox test --configuration example.ios.sim-18.release --loglevel verbose --take-screenshots failing --record-videos failing --retries 2",
     "test": "echo \"Error: no test specified\" && exit 1",
