--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -96,7 +96,7 @@ jobs:
       cancel-in-progress: true
     strategy:
       matrix:
-        devices: [{ ios: 17, xcode: "15.4" }, { ios: 18, xcode: "16.0" }]
+        devices: [{ ios: 17, xcode: "15.4" }, { ios: 18, xcode: "16-beta" }]
     needs: build
     steps:
       - uses: actions/checkout@v4
