--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -113,6 +113,8 @@ jobs:
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: ${{ matrix.devices.xcode }}
+      - name: Get Xcode version
+        run: xcodebuild -version
       - name: List all available simulators
         run: xcrun simctl list
       - name: Install AppleSimulatorUtils
