--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
-    "@react-native/eslint-config": "^0.74.85",
+    "@react-native/eslint-config": "^0.75.0-rc.6",
     "@release-it/conventional-changelog": "^2.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.2.1",
@@ -93,8 +93,8 @@
     "jest": "^29.6.3",
     "pod-install": "^0.1.0",
     "prettier": "^2.8.8",
-    "react": "18.2.0",
-    "react-native": "0.74.3",
+    "react": "18.3.1",
+    "react-native": "0.75.0-rc.6",
     "react-native-builder-bob": "^0.18.0",
     "react-native-reanimated": "3.12.1",
     "react-test-renderer": "18.2.0",
