docs: added `interactive` keyword to improve SEO search

--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
   "keywords": [
     "react-native",
     "keyboard",
-    "animation",
+    "interactive",
     "dismiss",
+    "animation",
     "focused input",
     "text changed",
     "selection changed",
