--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -23,7 +23,7 @@
     "react-native-gesture-handler": "2.18.1",
     "react-native-keyboard-controller": "link:../",
     "react-native-reanimated": "3.15.0",
-    "react-native-safe-area-context": "^4.10.8",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^3.34.0",
     "react-native-toast-message": "^2.2.0"
   },
