--- a/example/package.json
+++ b/example/package.json
@@ -25,7 +25,7 @@
     "react-native-haptic-feedback": "2.3.1",
     "react-native-keyboard-controller": "link:../",
     "react-native-reanimated": "3.15.0",
-    "react-native-safe-area-context": "^4.10.8",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^3.34.0",
     "react-native-text-input-mask": "3.1.5",
     "react-native-toast-message": "^2.2.0"
