chore: react-native 0.75 (#530)
## 📜 Description

Added support for `react-native` 0.75.

## 💡 Motivation and Context

`react-native` 0.75 is going to be published 14.08.24 - this PR adds
basic support to new react-native version.

In general old 1.12.x release should be compatible with RN 0.75. One
extra thing that I did was removing occurrences of `currentBridge` and
private header file - it have 0 impact on plain RN apps, but I've heard
that in newest RN versions Expo can conflict with it.

## 📢 Changelog

<!-- High level overview of important changes -->
<!-- For example: fixed status bar manipulation; added new types
declarations; -->
<!-- If your changes don't affect one of platform/language below - then
remove this platform/language -->

### Docs

- update compatibility guide;

### iOS

- remove `currentBridge` usage;

## 🤔 How Has This Been Tested?

Tested paper and fabric, on:
- iPhone 15 Pro (iOS 17.5);
- Pixel 7 Pro (Android 14).

## 📸 Screenshots (if appropriate):

<!-- Add screenshots/video if needed -->
<!-- That would be highly appreciated if you can add how it looked
before and after your changes -->

## 📝 Checklist

- [x] CI successfully passed
- [x] I added new mocks and corresponding unit-tests if library API was
changed

--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -30,6 +30,13 @@ jobs:
       cancel-in-progress: true
     steps:
       - uses: actions/checkout@v4
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          # force to remove default tools
+          tool-cache: true
+          # preserve Android
+          android: false
       - uses: actions/setup-node@v4
         with:
           node-version: 18.x
@@ -94,11 +101,6 @@ jobs:
     needs: build
     steps:
       - uses: actions/checkout@v4
-      - name: Download a single artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: android-e2e-apk
-          path: example/android/app/build/outputs/apk/
       - name: Free Disk Space (Ubuntu)
         uses: jlumbroso/free-disk-space@main
         with:
@@ -106,6 +108,11 @@ jobs:
           tool-cache: true
           # preserve Android
           android: false
+      - name: Download a single artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: android-e2e-apk
+          path: example/android/app/build/outputs/apk/
       - uses: actions/setup-node@v4
         with:
           node-version: 18.x
