--- a/example/package.json
+++ b/example/package.json
@@ -11,32 +11,32 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@gorhom/bottom-sheet": "^4.6.0",
+    "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-community/blur": "^4.4.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
-    "@react-navigation/bottom-tabs": "^6.5.16",
-    "@react-navigation/native": "^6.1.14",
-    "@react-navigation/native-stack": "^6.9.22",
-    "@react-navigation/stack": "^6.3.25",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
     "lottie-react-native": "^6.7.2",
-    "react": "18.2.0",
-    "react-native": "0.74.3",
-    "react-native-gesture-handler": "2.16.1",
-    "react-native-haptic-feedback": "^2.2.0",
+    "react": "18.3.1",
+    "react-native": "0.75.0-rc.6",
+    "react-native-gesture-handler": "2.18.1",
+    "react-native-haptic-feedback": "2.3.1",
     "react-native-keyboard-controller": "link:../",
-    "react-native-reanimated": "3.12.1",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
+    "react-native-reanimated": "3.15.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "^3.34.0",
     "react-native-text-input-mask": "3.1.5",
-    "react-native-toast-message": "^2.1.9"
+    "react-native-toast-message": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.74.85",
-    "@react-native/metro-config": "0.74.85",
-    "@react-native/typescript-config": "0.74.85",
+    "@react-native/babel-preset": "0.75.0-rc.6",
+    "@react-native/metro-config": "0.75.0-rc.6",
+    "@react-native/typescript-config": "0.75.0-rc.6",
     "@testing-library/jest-native": "^5.3.2",
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/react-native": "^11.5.0",
@@ -46,7 +46,7 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "jest": "^29.6.3",
     "patch-package": "^8.0.0",
-    "react-test-renderer": "18.2.0"
+    "react-test-renderer": "18.3.1"
   },
   "jest": {
     "preset": "react-native",
