--- a/example/package.json
+++ b/example/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/stack": "^6.4.1",
     "lottie-react-native": "^6.7.2",
     "react": "18.3.1",
-    "react-native": "0.75.0-rc.6",
+    "react-native": "0.75.2",
     "react-native-gesture-handler": "2.18.1",
     "react-native-haptic-feedback": "2.3.1",
     "react-native-keyboard-controller": "link:../",
@@ -34,9 +34,9 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.75.0-rc.6",
-    "@react-native/metro-config": "0.75.0-rc.6",
-    "@react-native/typescript-config": "0.75.0-rc.6",
+    "@react-native/babel-preset": "0.75.2",
+    "@react-native/metro-config": "0.75.2",
+    "@react-native/typescript-config": "0.75.2",
     "@testing-library/jest-native": "^5.3.2",
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/react-native": "^11.5.0",
