e2e: test on iOS 15

--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -87,7 +87,7 @@ jobs:
           path: example/ios/build/Build/Products/Release-iphonesimulator/KeyboardControllerExample.app/**
   e2e-test:
     name: ⚙️ Automated test cases (iOS-${{ matrix.devices.ios }})
-    runs-on: macos-14
+    runs-on: macos-${{ matrix.devices.macos }}
     timeout-minutes: 60
     env:
       WORKING_DIRECTORY: example
@@ -98,9 +98,10 @@ jobs:
       matrix:
         devices:
           [
-            { ios: 16, xcode: "14.3.1" },
-            { ios: 17, xcode: "15.4" },
-            { ios: 18, xcode: "16-beta" },
+            { ios: 15, xcode: "13.4.1", macos: 12 },
+            { ios: 16, xcode: "14.3.1", macos: 14 },
+            { ios: 17, xcode: "15.4", macos: 14 },
+            { ios: 18, xcode: "16-beta", macos: 14 },
           ]
     needs: build
     steps:
