ci: use ccache for fabric, cleanup Podfile (let's see hot it works with default configuration)

--- a/.github/workflows/build-ios-fabric.yml
+++ b/.github/workflows/build-ios-fabric.yml
@@ -54,11 +54,18 @@ jobs:
       - name: Install root dependencies
         run: yarn install --frozen-lockfile --cwd ../..
 
-      - name: Restore buildcache
-        uses: mikehardy/buildcache-action@v2
-        continue-on-error: true
+      - name: Install Ccache
+        uses: hendrikmuhs/ccache-action@v1.2
         with:
-          cache_key: react-native-keyboard-controller-fabric
+          max-size: 1.5G
+          key: ${{ runner.os }}-ccache-example-fabric-ios
+          create-symlink: true
+      - name: Setup ccache behavior
+        run: |
+          echo "CCACHE_SLOPPINESS=clang_index_store,file_stat_matches,include_file_ctime,include_file_mtime,ivfsoverlay,pch_defines,modules,system_headers,time_macros" >> $GITHUB_ENV
+          echo "CCACHE_FILECLONE=true" >> $GITHUB_ENV
+          echo "CCACHE_DEPEND=true" >> $GITHUB_ENV
+          echo "CCACHE_INODECACHE=true" >> $GITHUB_ENV
 
       - name: Setup Ruby (bundle)
         uses: ruby/setup-ruby@v1
