ci: use ccache instead of buildcache (#581)
## 📜 Description

Use `ccache` instead of `buildcache`.

## 💡 Motivation and Context

Mainly because of two reasons:
- `buildcache` doesn't speed up builds in the same performant way as it
did before (builds may take up to 15 minutes to complete);
- `buildcache` is deprecated (throws deprecation warning).

So in this PR for iOS I started to use `ccache` 👀 

## 📢 Changelog

<!-- High level overview of important changes -->
<!-- For example: fixed status bar manipulation; added new types
declarations; -->
<!-- If your changes don't affect one of platform/language below - then
remove this platform/language -->

### CI

- replace `buildcache` with `ccache`;

### iOS

- enable ccache integration in Podfile;

## 🤔 How Has This Been Tested?

Tested manually on CI 🙃 

## 📸 Screenshots (if appropriate):

|Before|After|
|-------|-----|
|<img width="224" alt="image"
src="https://github.com/user-attachments/assets/e7197fc9-f0eb-4e9d-a0df-209cd9dbaf15">|<img
width="202" alt="image"
src="https://github.com/user-attachments/assets/6f9f97ab-62c5-4298-adbf-fa24aaf1f405">|

## 📝 Checklist

- [x] CI successfully passed
- [x] I added new mocks and corresponding unit-tests if library API was
changed

--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -60,11 +60,18 @@ jobs:
         run: yarn
       - name: Install e2e dependencies
         run: yarn install --cwd e2e
-      - name: Restore buildcache
-        uses: mikehardy/buildcache-action@v2
-        continue-on-error: true
+      - name: Install Ccache
+        uses: hendrikmuhs/ccache-action@v1.2
         with:
-          cache_key: react-native-keyboard-controller-e2e
+          max-size: 1.5G
+          key: ${{ runner.os }}-ccache-e2e-ios
+          create-symlink: true
+      - name: Setup ccache behavior
+        run: |
+          echo "CCACHE_SLOPPINESS=clang_index_store,file_stat_matches,include_file_ctime,include_file_mtime,ivfsoverlay,pch_defines,modules,system_headers,time_macros" >> $GITHUB_ENV
+          echo "CCACHE_FILECLONE=true" >> $GITHUB_ENV
+          echo "CCACHE_DEPEND=true" >> $GITHUB_ENV
+          echo "CCACHE_INODECACHE=true" >> $GITHUB_ENV
       - name: Restore Pods cache
         uses: actions/cache@v4
         with:
