--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -31,7 +31,7 @@ target 'KeyboardControllerExample' do
       installer,
       config[:reactNativePath],
       :mac_catalyst_enabled => false,
-      # :ccache_enabled => true
+      :ccache_enabled => true
     )
   end
 end
