--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -45,6 +45,12 @@ jobs:
       - name: Install node_modules for example/
         run: yarn install --frozen-lockfile --cwd example
 
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: wrapper
+          cache-read-only: false
+
       - name: Restore Gradle cache
         uses: actions/cache@v4
         with:
