--- a/example/android/gradle.properties
+++ b/example/android/gradle.properties
@@ -38,5 +38,5 @@ hermesEnabled=false
 
 # speed up native builds
 org.gradle.caching=true
-org.gradle.configuration-cache=true
+# org.gradle.configuration-cache=true
 org.gradle.parallel=true
