--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -44,6 +44,8 @@ jobs:
             ${{ runner.os }}-yarn-
       - name: Install node_modules for example/
         run: yarn install --frozen-lockfile --cwd example
+      - name: ccache
+        uses: hendrikmuhs/ccache-action@v1.2
       - name: Restore Android ccache
         uses: actions/cache/restore@v4
         with:
