docs: update keywords

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "avoiding view",
     "avoid keyboard",
     "sticky view",
+    "over keyboard view",
     "keyboard aware scroll view",
     "keyboard toolbar",
     "keyboard done button",
