fix: swiftformat and swiftlint conflict

--- a/ios/.swiftlint.yml
+++ b/ios/.swiftlint.yml
@@ -1,6 +1,6 @@
 disabled_rules:
+  # trailing comma is forced by swiftformat
   - trailing_comma
-  - for_where
 
 line_length:
   warning: 120
@@ -9,6 +9,10 @@ line_length:
 identifier_name:
   excluded:
     - i # allow `i` variable in cycles
+
+opening_brace:
+  # this is controlled by `swiftformat` and we can not change config of formatter
+  ignore_multiline_statement_conditions: true
 
 excluded:
   - Pods
