chore: update swiftlint (#597)
## 📜 Description

Updated `swiftlint` to latest version.

## 💡 Motivation and Context

Updated `swiftlint` to latest version.

Unfortunately I got a conflict between `swiftformat` and `opening_brace`
rule from `swiftlint`. So I disabled a specific rule-case
`ignore_multiline_statement_conditions` because `swiftformat` handles
that.

Additionally I realized that some lint-related configs are included in
final npm-bundle, so I added them to ignore list.

## 📢 Changelog

<!-- High level overview of important changes -->
<!-- For example: fixed status bar manipulation; added new types
declarations; -->
<!-- If your changes don't affect one of platform/language below - then
remove this platform/language -->

### JS

- removed lint-related files from npm package;

### iOS

- removed ridiculous lint disabling approach in `UIResponder.swift`;

## 🤔 How Has This Been Tested?

Tested on CI.

## 📝 Checklist

- [x] CI successfully passed
- [x] I added new mocks and corresponding unit-tests if library API was
changed

--- a/ios/.swiftlint.yml
+++ b/ios/.swiftlint.yml
@@ -1,4 +1,5 @@
 disabled_rules:
+  # trailing comma is forced by swiftformat
   - trailing_comma
   - for_where
 
@@ -9,6 +10,10 @@ line_length:
 identifier_name:
   excluded:
     - i # allow `i` variable in cycles
+
+opening_brace:
+  # this is controlled by `swiftformat` and we can not change config of formatter
+  ignore_multiline_statement_conditions: true
 
 excluded:
   - Pods
