--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -42,6 +42,9 @@ jobs:
           xcode-version: "15.4"
       - name: Get Xcode version
         run: xcodebuild -version
+      - uses: muukii/actions-xcode-install-simulator@main
+        with:
+          ios_version: "15.5"
       - name: Save yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
