--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -89,6 +89,7 @@ def reactNativeArchitectures() {
   return value ? value.split(",") : ["armeabi-v7a", "x86", "x86_64", "arm64-v8a"]
 }
 
+apply from: new File(["node", "--print", "require.resolve('@sentry/react-native/package.json')"].execute().text.trim(), "../sentry.gradle")
 android {
   ndkVersion rootProject.ext.ndkVersion
 
