--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -83,7 +83,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pods-
       - name: Install Pods
-        run: pod install
+        run: export USE_CCACHE=1 && pod install
       - name: Install xcpretty
         run: gem install xcpretty
       - name: Build App
