--- a/FabricExample/ios/Podfile
+++ b/FabricExample/ios/Podfile
@@ -36,7 +36,7 @@ target 'KeyboardControllerFabricExample' do
       installer,
       config[:reactNativePath],
       :mac_catalyst_enabled => false,
-      :ccache_enabled => true
+      # :ccache_enabled => true
     )
   end
 end
