fix: do not run deploy preview from forks to avoid leak of secrets

--- a/.github/workflows/verify-docs.yml
+++ b/.github/workflows/verify-docs.yml
@@ -49,6 +49,7 @@ jobs:
   preview:
     runs-on: ubuntu-latest
     name: 🛫 Deploy preview
+    if: ${{ !github.event.pull_request.head.repo.fork }}
     defaults:
       run:
         working-directory: docs
