ci: do not use sudo for additional runtime installation

--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -131,7 +131,7 @@ jobs:
           max_attempts: 3
           command: |
             brew tap robotsandpencils/made
-            sudo xcodes runtimes install --keep-archive 'iOS ${{ matrix.devices.runtime }}'
+            xcodes runtimes install --keep-archive 'iOS ${{ matrix.devices.runtime }}'
       - name: List all available simulators
         run: xcrun simctl list
       - name: Install AppleSimulatorUtils
