--- a/example/package.json
+++ b/example/package.json
@@ -11,32 +11,35 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@gorhom/bottom-sheet": "^4.6.4",
-    "@react-native-community/blur": "^4.4.0",
+    "@gorhom/bottom-sheet": "^5.0.4",
+    "@react-native-community/blur": "^4.4.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
-    "lottie-react-native": "^6.7.2",
+    "lottie-react-native": "^7.0.0",
     "react": "18.3.1",
-    "react-native": "0.75.3",
-    "react-native-gesture-handler": "2.18.1",
+    "react-native": "0.76.0",
+    "react-native-gesture-handler": "2.20.1",
     "react-native-haptic-feedback": "2.3.3",
     "react-native-keyboard-controller": "link:../",
     "react-native-reanimated": "3.16.1",
-    "react-native-safe-area-context": "4.10.5",
+    "react-native-safe-area-context": "4.11.1",
     "react-native-screens": "^3.34.0",
     "react-native-text-input-mask": "3.1.5",
-    "react-native-toast-message": "^2.2.0"
+    "react-native-toast-message": "^2.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.75.3",
-    "@react-native/metro-config": "0.75.3",
-    "@react-native/typescript-config": "0.75.3",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "15.0.0-alpha.2",
+    "@react-native-community/cli-platform-android": "15.0.0-alpha.2",
+    "@react-native-community/cli-platform-ios": "15.0.0-alpha.2",
+    "@react-native/babel-preset": "0.76.0",
+    "@react-native/metro-config": "0.76.0",
+    "@react-native/typescript-config": "0.76.0",
     "@testing-library/jest-native": "^5.3.2",
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/react-native": "^11.5.0",
