--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -25,7 +25,7 @@
     "react-native-keyboard-controller": "link:../",
     "react-native-reanimated": "3.16.1",
     "react-native-safe-area-context": "4.11.1",
-    "react-native-screens": "^3.34.0",
+    "react-native-screens": "4.0.0-beta.14",
     "react-native-toast-message": "^2.2.1"
   },
   "devDependencies": {
