--- a/example/android/gradle.properties
+++ b/example/android/gradle.properties
@@ -34,4 +34,4 @@ newArchEnabled=false
 
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
-hermesEnabled=false
+hermesEnabled=true
