--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -21,6 +21,7 @@
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-gesture-handler": "2.18.1",
+    "react-native-haptic-feedback": "2.3.3",
     "react-native-keyboard-controller": "link:../",
     "react-native-reanimated": "3.16.1",
     "react-native-safe-area-context": "4.10.5",
