--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -103,12 +103,11 @@ jobs:
       cancel-in-progress: true
     strategy:
       matrix:
-        devices:
-          [
+        devices: [
             { ios: 15, xcode: "15.4", macos: 14, runtime: "15.5" },
             { ios: 16, xcode: "15.4", macos: 14, runtime: "16.4" },
             { ios: 17, xcode: "15.4", macos: 14 },
-            { ios: 18, xcode: "16.0", macos: 15 },
+            # { ios: 18, xcode: "16.0", macos: 15 },
           ]
     needs: build
     steps:
