--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -94,7 +94,7 @@ jobs:
           path: example/ios/build/Build/Products/Release-iphonesimulator/KeyboardControllerExample.app/**
   e2e-test:
     name: ⚙️ Automated test cases (iOS-${{ matrix.devices.ios }})
-    runs-on: macos-14
+    runs-on: macos-${{ matrix.devices.macos }}
     timeout-minutes: 90
     env:
       WORKING_DIRECTORY: example
@@ -103,12 +103,11 @@ jobs:
       cancel-in-progress: true
     strategy:
       matrix:
-        devices:
-          [
-            { ios: 15, xcode: "15.4", runtime: "15.5" },
-            { ios: 16, xcode: "15.4", runtime: "16.4" },
-            { ios: 17, xcode: "15.4" },
-            { ios: 18, xcode: "16.0" },
+        devices: [
+            { ios: 15, xcode: "15.4", macos: 14, runtime: "15.5" },
+            { ios: 16, xcode: "15.4", macos: 14, runtime: "16.4" },
+            { ios: 17, xcode: "15.4", macos: 14 },
+            # { ios: 18, xcode: "16.0", macos: 15 },
           ]
     needs: build
     steps:
