--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -125,20 +125,51 @@ jobs:
       - name: Install additional iOS runtimes
         if: ${{ matrix.devices.runtime != '' && matrix.devices.runtime != null }}
         run: |
-          # Set the parameters for retry logic
+          # Set parameters for retry logic
           TIMEOUT=600  # Timeout for each attempt in seconds (10 minutes)
           MAX_RETRIES=3
           RETRY_INTERVAL=60  # Wait time between retries in seconds (1 minute)
           RETRY_COUNT=0
           SUCCESS=0
 
+          # Function to execute command with a manual timeout
+          run_with_timeout() {
+            local command="$1"
+            local start_time=$(date +%s)
+
+            # Run the command in the background
+            eval "$command" &
+            local pid=$!
+
+            # Monitor the command with a timeout
+            while kill -0 $pid 2>/dev/null; do
+              local current_time=$(date +%s)
+              local elapsed_time=$((current_time - start_time))
+
+              # If timeout is exceeded, kill the command
+              if [[ $elapsed_time -ge $TIMEOUT ]]; then
+                echo "Command timed out after ${TIMEOUT} seconds."
+                kill -9 $pid
+                wait $pid 2>/dev/null
+                return 124  # Return code 124 for timeout
+              fi
+
+              # Sleep briefly to avoid a busy loop
+              sleep 5
+            done
+
+            # Wait for command to finish and capture exit code
+            wait $pid
+            return $?
+          }
+
           # Start the retry loop
           while [[ $RETRY_COUNT -lt $MAX_RETRIES ]]; do
             echo "Attempt $((RETRY_COUNT + 1)) of $MAX_RETRIES to install iOS runtime..."
 
-            # Execute the command with timeout
+            # Execute the command with a manual timeout
             COMMAND_EXIT_CODE=0
-            timeout $TIMEOUT bash -c "brew tap robotsandpencils/made && sudo xcodes runtimes install --keep-archive 'iOS ${{ matrix.devices.runtime }}'" || COMMAND_EXIT_CODE=$?
+            run_with_timeout "brew tap robotsandpencils/made && sudo xcodes runtimes install --keep-archive 'iOS ${{ matrix.devices.runtime }}'" || COMMAND_EXIT_CODE=$?
 
             # Check if the command succeeded
             if [[ $COMMAND_EXIT_CODE -eq 0 ]]; then
