--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -122,78 +122,18 @@ jobs:
           xcode-version: ${{ matrix.devices.xcode }}
       - name: Get Xcode version
         run: xcodebuild -version
+      # needed for additional runtime installation
+      - name: Install Xcodes
+        run: brew tap robotsandpencils/made
       - name: Install additional iOS runtimes
         if: ${{ matrix.devices.runtime != '' && matrix.devices.runtime != null }}
-        run: |
-          # Set parameters for retry logic
-          TIMEOUT=600  # Timeout for each attempt in seconds (10 minutes)
-          MAX_RETRIES=3
-          RETRY_INTERVAL=60  # Wait time between retries in seconds (1 minute)
-          RETRY_COUNT=0
-          SUCCESS=0
-
-          # Function to execute command with a manual timeout
-          run_with_timeout() {
-            local command="$1"
-            local start_time=$(date +%s)
-
-            # Run the command in the background
-            eval "$command" &
-            local pid=$!
-
-            # Monitor the command with a timeout
-            while kill -0 $pid 2>/dev/null; do
-              local current_time=$(date +%s)
-              local elapsed_time=$((current_time - start_time))
-
-              # If timeout is exceeded, kill the command
-              if [[ $elapsed_time -ge $TIMEOUT ]]; then
-                echo "Command timed out after ${TIMEOUT} seconds."
-                kill -9 $pid
-                wait $pid 2>/dev/null
-                return 124  # Return code 124 for timeout
-              fi
-
-              # Sleep briefly to avoid a busy loop
-              sleep 5
-            done
-
-            # Wait for command to finish and capture exit code
-            wait $pid
-            return $?
-          }
-
-          # Start the retry loop
-          while [[ $RETRY_COUNT -lt $MAX_RETRIES ]]; do
-            echo "Attempt $((RETRY_COUNT + 1)) of $MAX_RETRIES to install iOS runtime..."
-
-            # Execute the command with a manual timeout
-            COMMAND_EXIT_CODE=0
-            run_with_timeout "brew tap robotsandpencils/made && sudo xcodes runtimes install --keep-archive 'iOS ${{ matrix.devices.runtime }}'" || COMMAND_EXIT_CODE=$?
-
-            # Check if the command succeeded
-            if [[ $COMMAND_EXIT_CODE -eq 0 ]]; then
-              SUCCESS=1
-              echo "iOS runtime installation successful."
-              break
-            elif [[ $COMMAND_EXIT_CODE -eq 124 ]]; then
-              echo "Installation timed out after ${TIMEOUT} seconds"
-            else
-              echo "Installation failed with exit code $COMMAND_EXIT_CODE"
-            fi
-
-            echo "Retrying installation in $RETRY_INTERVAL seconds..."
-            sleep $RETRY_INTERVAL
-
-            # Increment the retry counter
-            RETRY_COUNT=$((RETRY_COUNT + 1))
-          done
-
-          # Exit with error if all attempts failed
-          if [[ $SUCCESS -eq 0 ]]; then
-            echo "All attempts to install iOS runtime failed."
-            exit 1
-          fi
+        uses: ./.github/actions/retry-with-timeout
+        with:
+          command: |
+            sudo xcodes runtimes install --keep-archive "iOS ${{ matrix.devices.runtime }}"
+          timeout: 600 # 10 minutes
+          max_retries: 3
+          retry_interval: 60
       - name: List all available simulators
         run: xcrun simctl list
       - name: Install AppleSimulatorUtils
