--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -130,7 +130,7 @@ jobs:
         uses: ./.github/actions/retry-with-timeout
         with:
           command: |
-            sudo xcodes runtimes install --keep-archive "iOS ${{ matrix.devices.runtime }}"
+            "sudo xcodes runtimes install --keep-archive 'iOS ${{ matrix.devices.runtime }}'"
           timeout: 600 # 10 minutes
           max_retries: 3
           retry_interval: 60
