fix: sudo permissions

--- a/.github/actions/retry-with-timeout/action.yml
+++ b/.github/actions/retry-with-timeout/action.yml
@@ -37,7 +37,7 @@ runs:
           local start_time=$(date +%s)
 
           # Run the command with sudo in the background
-          $command &
+          sudo bash -c "$command" &
           local sudo_pid=$!
 
           # Wait briefly to allow sudo to spawn its child process
