--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -129,8 +129,7 @@ jobs:
         if: ${{ matrix.devices.runtime != '' && matrix.devices.runtime != null }}
         uses: ./.github/actions/retry-with-timeout
         with:
-          command: |
-            "sudo xcodes runtimes install --keep-archive 'iOS ${{ matrix.devices.runtime }}'"
+          command: "xcodes runtimes install --keep-archive 'iOS ${{ matrix.devices.runtime }}'"
           timeout: 600 # 10 minutes
           max_retries: 3
           retry_interval: 60
