ci: interrupt sudo command in runtime installation (#688)
## 📜 Description

Fixed an issue when additional runtime installation can not be
terminated after 10 minutes.

## 💡 Motivation and Context

When using [nick-fields/retry](https://github.com/nick-fields/retry) and
we interrupt sudo command then we are getting errors like this
https://github.com/nick-fields/retry/issues/114 or
https://github.com/nick-fields/retry/issues/124

To overcome this problem I decided to create own script for retrying a
command. This PR delivers that.

## 📢 Changelog

<!-- High level overview of important changes -->
<!-- For example: fixed status bar manipulation; added new types
declarations; -->
<!-- If your changes don't affect one of platform/language below - then
remove this platform/language -->

### CI

- replace `nick-fields/retry` with own action;

## 🤔 How Has This Been Tested?

Reduced timeout to 2 minutes and verified that action was repeated 3
times with 1 minute delay between attempts.

## 📸 Screenshots (if appropriate):

<img width="1312" alt="image"
src="https://github.com/user-attachments/assets/051aea2e-32d1-4878-bf8f-b6831948c7c2">

## 📝 Checklist

- [x] CI successfully passed
- [x] I added new mocks and corresponding unit-tests if library API was
changed

--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -122,15 +122,17 @@ jobs:
           xcode-version: ${{ matrix.devices.xcode }}
       - name: Get Xcode version
         run: xcodebuild -version
+      # needed for additional runtime installation
+      - name: Install Xcodes
+        run: brew tap robotsandpencils/made
       - name: Install additional iOS runtimes
         if: ${{ matrix.devices.runtime != '' && matrix.devices.runtime != null }}
-        uses: nick-fields/retry@v3
+        uses: ./.github/actions/retry-sudo-with-timeout
         with:
-          timeout_minutes: 10
-          max_attempts: 3
-          command: |
-            brew tap robotsandpencils/made
-            sudo xcodes runtimes install --keep-archive 'iOS ${{ matrix.devices.runtime }}'
+          command: "xcodes runtimes install --keep-archive 'iOS ${{ matrix.devices.runtime }}'"
+          timeout: 600 # 10 minutes
+          max_retries: 3
+          retry_interval: 60
       - name: List all available simulators
         run: xcrun simctl list
       - name: Install AppleSimulatorUtils
